lesson2/service_front.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    tier: frontend
  name: frontend
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    tier: frontend
