lesson2/service_front_v2.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    tier: frontend
  name: frontend-v2
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    tier: frontend-v2
