lesson2/ingress_v2_header.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress-v2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "canary"
    nginx.ingress.kubernetes.io/canary-by-header-value: "always"
spec:
  rules:
    - host: app.test.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend-v2
                port:
                  number: 80
